# ai-platform

./: .env.example  .gitignore  AI_AUTO_BLOG_기획서.md  AI_경리봇_완전한_기획서_추가.md  Cargo.toml  D1_SETUP.md  DEBUG_TASK.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INSTRUCTIONS.md  DOLIBARR_INTEGRATION_GUIDE.md  GEMINI_FIX_404.md  GEMINI_TASK.txt  LICENSE  Makefile  PROJECT_HANDOVER_DOCUMENT.md  README.md  README_COMPLETE.md  VERCEL_ENV_SETUP.md  YouTube 쇼츠 자동화 프로젝트.docx  auto-blog-plan.csv  deployment-fix.txt  docker-compose.yml  extract_docx.ps1  extract_docx2.ps1  extracted.txt  next.config.js  open-next.config.ts  package-lock.json  package.json  postcss.config.js  schema.sql  start.bat  tsconfig.json  vercel-fixed.json  vercel.json  wrangler.jsonc  wrangler.toml  youtube_content.txt  youtube_shorts.docx  블로그_생성기_수정계획.md  (+1 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
.open-next/.build/: open-next.config.mjs
.open-next/assets/: BUILD_ID
.open-next/cloudflare/: init.js  (+1 more)
.vercel/: project.json
_posts/: sample-post.md
app/: globals.css  layout.tsx  page.tsx
backend/: package.json  server.js
lib/: blog-storage.ts  client-auth.ts  validators.ts
pages/: auto-blog.js  index.js
src/: main.rs
web/: advanced-blog-generator.html  advanced-chat.html  api-proxy.html  blog-generator.html  character-generator.html  data-input.html  data-input.js  index.html  navigation.html  sales-analysis.html  sales-analysis.js  script.js  shorts-generator-fixed.html  shorts-generator.html  story-generator.html  style.css  youtube-shorts-generator.html
(+169 files in other folders)
