[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"
authors = ["AI CLI Contributors"]
description = "AI-powered CLI Git Assistant - Generate conventional commits and explain changes"
license = "Apache-2.0"
repository = "https://github.com/mon664/ai-cli"
homepage = "https://github.com/mon664/ai-cli"
keywords = ["git", "ai", "cli", "commit", "assistant"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "ai-cli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true